@@ -1,4 +1,11 @@
 2014-10-20  Ola Jeppsson  <ola@adapteva.com>
+	* scripts/build_and_test_all.sh:
+	Yet another build/test script. This one seems to find more
+	examples to build than the others, but its test failure
+	detection is probably worse.
+
+
+2014-10-20  Ola Jeppsson  <ola@adapteva.com>
 	* apps/shm_test/src/shm_test.c:
 	* emesh/emesh_bandwidth_all2one/src/mesh_one.c:
 	* emesh/emesh_traffic/src/mesh_traffic.c:
